package org.example;

public class partidos_tenis_app {
    static void main() {
        Jugador jugador_1 = new Jugador("alex", 5);
        Jugador jugador_2 = new Jugador("pablo",8);
        Jugador jugador_3 = new Jugador("ivan",17);

    }

}
